--- a/factory-rest/src/main/resources/application.properties
+++ b/factory-rest/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8080
-spring.datasource.url=jdbc:mysql://localhost:3306/factory
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_684215b31b59848?reconnect=true
+spring.datasource.username=b90e1a653f7a1c
+spring.datasource.password=955e0ce9
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Show or not log for each sql query
 spring.jpa.show-sql = true
