--- a/factory-rest/pom.xml
+++ b/factory-rest/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<artifactId>factory-rest</artifactId>
-	<packaging>war</packaging>
+<!-- 	<packaging>war</packaging> -->
 	<name>factory-rest</name>
 	<description>Factory Management rest webservices</description>
 
@@ -63,14 +63,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <packagingExcludes>WEB-INF/lib/tomcat-*.jar</packagingExcludes>
-                    <warName>factory-app</warName>
-                </configuration>
-            </plugin>
+<!--             <plugin> -->
+<!--                 <groupId>org.apache.maven.plugins</groupId> -->
+<!--                 <artifactId>maven-war-plugin</artifactId> -->
+<!--                 <configuration> -->
+<!--                     <packagingExcludes>WEB-INF/lib/tomcat-*.jar</packagingExcludes> -->
+<!--                     <warName>factory-app</warName> -->
+<!--                 </configuration> -->
+<!--             </plugin> -->
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<executions>
