--- a/factory-rest/pom.xml
+++ b/factory-rest/pom.xml
@@ -38,8 +38,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
-		
-		
+
         <dependency>
             <groupId>ma.tetouan</groupId>
             <artifactId>factory-front</artifactId>
@@ -91,6 +90,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+	          <groupId>com.heroku.sdk</groupId>
+	          <artifactId>heroku-maven-plugin</artifactId>
+	          <configuration>
+	            <appName>mtt-factory</appName>
+	            <processTypes>
+          			<web>java $JAVA_OPTS -jar target/*.jar --p $PORT</web>
+        		</processTypes>
+	          </configuration>
+        	</plugin>			
 		</plugins>
 	</build>
 
