--- a/factory-rest/src/main/resources/application.properties
+++ b/factory-rest/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8080
+server.port = ${PORT:5000}
 spring.datasource.url=jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_684215b31b59848?reconnect=true
 spring.datasource.username=b90e1a653f7a1c
 spring.datasource.password=955e0ce9
