--- a/factory-front/angular.json
+++ b/factory-front/angular.json
@@ -28,7 +28,10 @@
                 "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
               }
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/tether/dist/js/tether.min.js"
+            ]
           },
           "configurations": {
             "production": {
