--- a/factory-front/package.json
+++ b/factory-front/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
-    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
-    "bootstrap": "^4.0.0"
+    "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "bootstrap": "^4.0.0",
+    "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.6",
+    "rxjs": "~6.3.3",
+    "tether": "^1.4.5",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.11.0",
