--- a/factory-front/package.json
+++ b/factory-front/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "ng-http-loader": "^5.0.0",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "tether": "^1.4.5",
