--- a/factory-rest/src/main/resources/application.properties
+++ b/factory-rest/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 server.port = ${PORT:5000}
-spring.datasource.url=jdbc:mysql://eu-cdbr-west-02.cleardb.net/heroku_684215b31b59848?reconnect=true
-spring.datasource.username=b90e1a653f7a1c
-spring.datasource.password=955e0ce9
+spring.datasource.url=${CLEARDB_DATASOURCE_URL:jdbc:mysql://localhost:3306/mtt}
+spring.datasource.username=${CLEARDB_DATASOURCE_USER:root}
+spring.datasource.password=${CLEARDB_DATASOURCE_PASS:root}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Show or not log for each sql query
 spring.jpa.show-sql = true
+#Spring security credentials
+spring.security.user.name=${ADMIN_USERNAME:admin}
+spring.security.user.password=${ADMIN_PASSWORD:admin}
