ajout des roles user et admin sur spring sec

--- a/factory-rest/src/main/resources/application.properties
+++ b/factory-rest/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.password=${CLEARDB_DATASOURCE_PASS:root}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Show or not log for each sql query
 spring.jpa.show-sql = true
-#Spring security credentials
-spring.security.user.name=${ADMIN_USERNAME:admin}
-spring.security.user.password=${ADMIN_PASSWORD:admin}
+#security credentials
+admin.name=${ADMIN_USERNAME:admin}
+admin.password=${ADMIN_PASSWORD:admin}
+user.name=${USER_USERNAME:user}
+user.password=${USER_PASSWORD:user}
+#spring.security.user.name=${ADMIN_USERNAME:admin}
+#spring.security.user.password=${ADMIN_PASSWORD:admin}
